# potato

./: Cargo.toml  README.md  WRITE_UP.md  makefile
src/: cpu.rs  display.rs  lib.rs  main.rs
