[package]
name = "potato"
version = "0.1.0"
edition = "2021"
description = "A minimal CHIP-8 emulator"
authors = ["Emerald"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.3"
phf = { version = "0.11.1", features = ["macros"] }
pixels = "0.10.0"
rand = "0.8.5"
# Need to use Tao 0.12 until pixels updates to raw_window_handle 0.5
# tao = "^0.12.0"
winit = "*"
